<resources>
    <string name="app_name">Project C</string>
    <string name="about_message">Welcome, explorer.\n
        You\'ve just stepped into a world where nothing is handed to you and everything is waiting to be discovered. This game isn\'t just about solving puzzles. It\'s about paying attention. About thinking differently. About seeing the hidden in the obvious. Each level has been designed to challenge your logic, twist your assumptions, and reward your curiosity.\n
        Behind every chapter lies a new encryption method, a new way of thinking. From ancient scripts to digital whispers, every clue tells a story but only if you know how to listen.\n\n
        <font size="20"><b><u>About Me</u></b></font>\n
        <font color="#1e1e1e">Bbcf\.\.\. jebat bar gel ntnva</font>\n
        I\'m Kumar Ansh, a Computer Science Engineering student who\'s endlessly fascinated by puzzles, ciphers, and the strange thrill of solving things no one else sees. This game started as a passion project - something small - but it quickly turned into a canvas for all the weird and clever things I\'ve learned (and loved) along the way.\n
        I didn\'t build this just to entertain, I built it to challenge you. To make you think, doubt, discover, and most of all, enjoy the process of getting stuck and then unsticking yourself. Every level is a piece of something I found cool, confusing, or just plain fun and now it\'s your turn to make sense of it.\n
        You don\'t need to be an expert. You just need to be curious.\n\n
        <font size="20"><b><u>One Last Thing\.\.\. <i>The Only Rule</i></u></b></font>\n
        <font color="#1e1e1e">Cdsvv robo\.\.\. sxdobocdsxq</font>\n
        There are no rules.\n
        Not really. Not here.\n
        You won\'t find walkthroughs or glowing arrows. There are no limits to how you solve what\'s in front of you.\n\n
        Use Google. Use your notes. Use the built-in browser. Type wildly. Guess boldly. Think sideways. Whether it takes you ten seconds or ten hours, what matters is how you get there, not how fast.\n
        If you\'re wondering what\'s allowed - the answer is\:\n
        <font color="#1e1e1e">Bwjpwopey</font>\n
        <i>Everything</i>.\n\n
        <font size="20"><b><u>References &amp; Acknowledgments</u></b></font>\n
        This game was built with inspiration and learning drawn from a variety of sources. Key references include Project VOID, TryHackMe.com, YouTube tutorials, and insights generated with the help of ChatGPT. Elements of real-world data have also been incorporated using publicly available resources such as Google Maps and Google Street View. These tools, platforms, and communities played a crucial role in shaping the puzzles, mechanics, and realism of the game experience. Deep respect and thanks go to the creators, educators, and communities that made this possible.\n\n
        Oh, and if you\'re here looking for the developer\'s username\.\.\.
        Nice try. This isn\'t the place. 😉</string>
    <string name="splash_title">Clue.dicode</string>
    <string name="splash_sign">~KrAnsh</string>
    <string name="login_title">Login</string>
    <string name="username_hint">Username</string>
    <string name="email_hint">Email ID</string>
    <string name="dob_hint">Date of Birth</string>
    <string name="sign_in_button">Sign In</string>
    <string name="google_sign_in">Continue with Google</string>
    <string name="facebook_sign_in">Continue with Facebook</string>
    <string name="anonymous_sign_in">Continue Anonymously</string>
    <string name="main_title">Clue.dicode</string>
    <string name="play_button">Play</string>
    <string name="settings_button">Settings</string>
    <string name="about_me_button">About Me</string>
    <string name="sign_out_button">Sign Out</string>
    <string name="exit_button">Exit</string>
    <string name="notes_title">Notes</string>
    <string name="notes_dummy_text">Feel free to write down anything you find important or worth remembering.\n
        Whether it\'s a clue, a pattern, or just a random thought - this space is yours.\n
        Sometimes, the smallest notes make the biggest difference.</string>
    <string name="settings_title">Settings</string>
    <string-array name="languages">
        <item>English</item>
    </string-array>
    <string name="save_button">Save</string>
    <string name="feedback_button">Send Feedback</string>
    <string name="privacy_text">Privacy Policy</string>
    <string name="terms_text">Terms of Use</string>
    <string name="hints_title">Hints</string>
    <string name="tv_hint_1">Hint #1</string>
    <string name="tv_hint_2">Hint #2</string>
    <string name="tv_hint_3">Hint #3</string>
    <string name="tv_hint_4">Hint #4</string>
    <string name="tv_hint_5">Hint #5</string>
    <string name="tv_answer">Show Answer #1</string>
    <string name="tv_answer2">Show Answer #2</string>
    <string name="tv_answer3">Show Answer #3</string>
    <string name="btn_showAd">Show Ad</string>
    <string name="chapter_code_hint">Enter Your Code Here</string>
    <string name="level_answer_hint">Enter Your Answer Here</string>
    <string name="submit_button">Submit</string>
    <string name="back_button">Back</string>
    <string name="next_button">Next</string>
    <string name="coming_soon">Coming soon\.\.\.</string>
    <string name="welcome_text">Welcome to Clue.dicode</string>
    <string name="empty_fields">Please fill all the above fields</string>
    <string name="error_try_again">Error occurred, Please try again</string>
    <string name="go_back_text">Correct answer, You can go back now.</string>
    <string name="correct">Correct answer!</string>
    <string name="incorrect">Incorrect answer!</string>
    <string name="code_accepted">Code accepted!</string>
    <string name="code_rejected">Code rejected!</string>
    <string name="congrats_message">All chapters are complete — for now.</string>
    <string name="chapter_title_0">Chapter 0</string>
    <string name="level_0.1">0.1</string>
    <string name="level_0.2">0.2</string>
    <string name="level_0.3">0.3</string>
    <string name="level_0.4">0.4</string>
    <string name="level_title_0.1">Level 0.1</string>
    <string name="level_description_0.1">Hello, user!\nWelcome to Chapter 0,\n
        Since it\'s your very first step into the game, I\'ll go easy on you.\n
        This chapter is designed to be simple and beginner friendly, giving you a chance to get comfortable with how everything works.\n
        Pay close attention though, even the basics can hide clever tricks.\n
        Stuck for too long need an hint? Tap onto the bottom-right hints button.</string>
    <string name="level_question_0.1">What does the \'C\' stand for in Project C?</string>
    <string name="level_0.1_hint">Have you checked the home screen?</string>
    <string name="level_0.1_answer">Clue.dicode</string>
    <string name="level_title_0.2">Level 0.2</string>
    <string name="level_description_0.2">Impressive, you\'ve passed the first test.\n
        But don\'t get comfortable, that was only the beginning.\n
        Tell me, do those dots and dashes remind you of something ancient? Something whispered across time? You\'ve seen them before, maybe in the shadows of old war rooms, or encoded messages only few could read.\n
        P.S. You\'re not bound by rules here. The answers are out there, use Google, search far and wide.</string>
    <string name="level_question_0.2">.. -. - . .-. . ... - .. -. --. -....- -- --- .-. ... .</string>
    <string name="level_0.2_hint">Try searching for morse code on Google.</string>
    <string name="level_0.2_answer">interesting-morse</string>
    <string name="level_title_0.3">Level 0.3</string>
    <string name="level_description_0.3">You\'re catching on quickly.\n
        Now, it\'s time to journey deeper into something older than any cipher or puzzle. The past holds more than just stories, it holds truths wrapped in symbolism, loyalty, and chaos.\n
        What you uncover next has roots that reach far back, into a legacy shaped by choices and consequences.\n
        P.S. If anything feels important, write it down, there\'s a built-in notes tool in the bottom-left corner, made just for that. And remember, you\'re never alone in this Google is your silent companion, ready when you are.</string>
    <string name="level_question_0.3">A timeless tale of dharma, duty, and destruction — what\'s the name of this epic?</string>
    <string name="level_0.3_hint">Have you tried searching it on Google?</string>
    <string name="level_0.3_answer">mahabharata</string>
    <string name="level_title_0.4">Level 0.4</string>
    <string name="level_description_0.4">You\'ve made it to the end of Chapter 0.\n
        But don’t let your guard down just yet. What lies ahead moves faster, hides deeper, and demands more from those who seek the truth.\n
        The next chapters won\'t wait for hesitation.\n
        Also just a friendly tip for you\.\.\. keep track of whatever you are receiving, it might be useful later on.\n
        P.S. Stay sharp and swift - blink, and you might miss something that matters.</string>
    <string name="level_question_0.4">What\'s the developer\'s username for this app?</string>
    <string name="level_0.4_hint">Have you ever heard of splash screen?</string>
    <string name="level_0.4_answer">KrAnsh</string>
    <string name="chapter_title_1">Chapter 1</string>
    <string name="level_1.1">1.1</string>
    <string name="level_1.2">1.2</string>
    <string name="level_1.3">1.3</string>
    <string name="level_1.4">1.4</string>
    <string name="level_title_1.1">Level 1.1</string>
    <string name="level_description_1.1">Welcome, user.\n
        You\'ve stepped into Chapter 1, where the shadows begin to speak in patterns.\n
        This chapter marks the beginning of your journey through the world of encryption. Simple at first, but every layer hides intent. Every code tells a story.\n
        Prepare to twist symbols, shift meanings, and unlock what others overlook.\n
        P.S. Shift your perspective - sometimes, the truth is just a few letters away.</string>
    <string name="level_question_1.1">ZopmalkJhlzhyJpwoly</string>
    <string name="level_1.1_hint">Try looking for encryption technique that involves shifting letters.</string>
    <string name="level_1.1_hint2">Search for Caesar Cipher decrypter.</string>
    <string name="level_1.1_answer">ShiftedCaesarCipher</string>
    <string name="level_title_1.2">Level 1.2</string>
    <string name="level_description_1.2">Read it backward, but not the way you think.\n
        This isn\'t just a matter of flipping letters or reversing words. The real meaning hides behind a deeper kind of reflection. Think in patterns, not just direction. What looks familiar, might not be.</string>
    <string name="level_question_1.2">IvevihvwZgyzhsXrksvi</string>
    <string name="level_1.2_hint">Try looking for encryption technique that involves reversing letters in a certain way.</string>
    <string name="level_1.2_hint2">Search for Atbash Cipher decrypter.</string>
    <string name="level_1.2_answer">ReversedAtbashCipher</string>
    <string name="level_title_1.3">Level 1.3</string>
    <string name="level_description_1.3">What happened?\n
        The path seems blocked, or is it?\n
        Is it locked? Maybe. But locks often hide in plain sight.\n
        Have you tried the KEY?\nNot just any key, the real one. Look closely. It may not be spelled the way you expect but it\'s there.</string>
    <string name="level_question_1.3">VsauElnOci</string>
    <string name="level_1.3_hint">Try looking for encryption techniques that requires a key.</string>
    <string name="level_1.3_hint2">Search for Vigenère Cipher decrypter.</string>
    <string name="level_1.3_answer">LockAndKey</string>
    <string name="level_title_1.4">Level 1.4</string>
</resources>