<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    tools:context=".mainScreen.SettingsActivity">

    <TextView
        android:id="@+id/tvSettingsTitle"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/black"
        android:fontFamily="@font/orbitron"
        android:gravity="center"
        android:paddingTop="10dp"
        android:text="@string/settings_title"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/usernameLayout"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:background="@color/gray"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSettingsTitle">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/orbitron"
            android:gravity="center"
            android:text="@string/username_hint"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center"
            android:inputType="text"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/userDobLayout"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@color/gray"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameLayout">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/orbitron"
            android:gravity="center"
            android:text="@string/dob_hint"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etDob"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center"
            android:inputType="text"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/userEmailLayout"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@color/gray"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userDobLayout">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/orbitron"
            android:gravity="center"
            android:text="@string/email_hint"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:inputType="textEmailAddress"
            android:textColor="@color/white" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSave"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginBottom="70dp"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/orbitron"
        android:text="Save"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvPrivacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/privacy_text"
        android:textColor="@color/light_gray"
        app:layout_constraintBottom_toTopOf="@+id/tvTerms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSave" />

    <TextView
        android:id="@+id/tvTerms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/terms_text"
        android:textColor="@color/light_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPrivacy" />


</androidx.constraintlayout.widget.ConstraintLayout>