<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/orbitron"
        android:text="@string/login_title"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="180dp"
        android:background="@drawable/login_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etUsername"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="50dp"
            android:hint="@string/username_hint"
            android:textColorHint="#8CFFFFFF"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:boxStrokeColor="@color/dark_gray"
            app:boxStrokeWidth="2dp"
            app:cursorColor="@color/dark_gray"
            app:hintTextColor="#9AFFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/baseline_person_24"
            app:startIconTint="@color/dark_gray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userInputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|textPersonName"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etEmail"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="50dp"
            android:hint="@string/email_hint"
            android:textColorHint="#8CFFFFFF"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:boxStrokeColor="@color/dark_gray"
            app:boxStrokeWidth="2dp"
            app:cursorColor="@color/dark_gray"
            app:hintTextColor="#9AFFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etUsername"
            app:startIconDrawable="@android:drawable/sym_action_email"
            app:startIconTint="@color/dark_gray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userInputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etDob"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="50dp"
            android:hint="@string/dob_hint"
            android:textColorHint="#8CFFFFFF"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:boxStrokeColor="@color/dark_gray"
            app:boxStrokeWidth="2dp"
            app:cursorColor="@color/dark_gray"
            app:hintTextColor="#9AFFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etEmail"
            app:startIconDrawable="@drawable/outline_calendar_month_24"
            app:startIconTint="@color/dark_gray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userInputDOB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="3dp"
            android:layout_marginTop="40dp"
            android:layout_weight="1"
            android:background="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/buttonGoogleSignIn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etDob" />

        <!--Create your custom button for google sign in-->

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonGoogleSignIn"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/dark_gray"
            android:fontFamily="@font/orbitron"
            android:text="@string/google_sign_in"
            android:textColor="@color/white"
            app:cornerRadius="10dp"
            app:icon="@drawable/googleg_standard_color_18"
            app:iconTint="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/buttonFacebookSignIn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonFacebookSignIn"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/dark_gray"
            android:fontFamily="@font/orbitron"
            android:text="@string/facebook_sign_in"
            android:textColor="@color/white"
            app:cornerRadius="10dp"
            app:icon="@drawable/facbook"
            app:iconSize="25dp"
            app:iconTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonGoogleSignIn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>